--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,7 @@
     <string name="Common_Edit">编辑</string>
     <string name="Common_Watch">查看</string>
     <string name="Common_No_Desc">没有描述</string>
+    <string name="Common_Date">日期</string>
+    <string name="Common_Time">时间</string>
 
 </resources>
