--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="Common_No_Desc">没有描述</string>
     <string name="Common_Date">日期</string>
     <string name="Common_Time">时间</string>
+    <string name="Common_No_Data_tips">暂无数据, 点击添加第一个吧！</string>
 
 </resources>
